Translate events to child frame's closest view before delegating them. b=180015 r+sr=bzbarsky